--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,10 +12,10 @@
   }
 
   h2 {
-    @apply text-2xl font-bold;
+    @apply text-3xl font-medium;
   }
 
   p {
-    @apply text-lg;
+    @apply text-lg text-xl font-medium;
   }
 }
